fixed layout issue for recipeList in desktop mode

--- a/src/components/Client/Recipes/Recipes.css
+++ b/src/components/Client/Recipes/Recipes.css
@@ -147,6 +147,8 @@
     }
 
     .recipeListContainer {
+        flex-direction: row;
+        flex-wrap: wrap;
         gap: 25px;
     }
 
